# spot_auto_seller_

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_image.yml  lint.yml  pytest.yml
app/: __main__.py
app/src/: binance_talker.py  calculations.py  config.py  regular_tasks.py  tasks.py
app/src/static/: constant.py  exceptions.py
shell_scripts/: restart.sh
tests/: test_calculations.py
